css/adelphi.css
<style type="text/css">
body
{
    background-color: white;
    margin: 0;
    padding-top: 75px;
    padding: 0;
    font-size: 14px;
}

header svg
{
    display: block;
    margin: 0 auto;
}
body, p, ul, ol, li, span, div
{
     font-family: "FreeSans", "Helvetica", sans-serif; 
}

h1,h2,h3,h4,h5 { font-family: Ubuntu, "Gotham", "Futura", "Century Gothic", sans-serif; }
h1{ font-size: 150%;  margin: 0px; margin-top: 2em; background-color: black; color: white; padding: .25em; }
h1.title {margin:0;padding:0; border-style: none; background-color: transparent; color: black; clear: both;}
h2{ font-size: 130%; margin:0; margin-top: 1em; text-transform: uppercase;}
h3{ font-size: 120%; font-weight: bold; }
h4{ font-size: 110%; font-weight: bold; }
h5 { padding: 0; margin: 0; font-size: 100%; font-style: italic; }

a { text-decoration: none; }
a img { border-style: none; }

table
{
    border-collapse:collapse;
}
table,th, td
{
    border: 1px solid black;
    padding: 0 .5em;
}

p
{
    margin: .5em 0;
    line-height: 1.5em;
}

.img-right 
{
    float: right;
    background-color: #d3d3d3;
    padding: .25em;
    font-weight: bold;
    font-size: 80%;
    text-align: center;
}
.img-right img { display: block; margin-bottom: .25em; }
.clear-all {clear: both;}
.warn { color: red; font-weight: bold; text-align: center; }
.center { text-align: center; }
.single, .single p { line-height: 1.25; }
#required-books p, #suggested-books p,*[id*='reading'] p, .ref p, #course-readings-bibliography p
{
    margin-bottom: 1em;
    margin-left: 2em;
    margin-bottom: .25em;
    text-indent: -2em;
    line-height: 1.5em;
}

.figure
{
    border-top: 2px solid black;
    border-bottom: 2px solid black;
    padding: .25em 0;
}
.figure svg, .figure img
{
    max-width: 100%;
}
.caption
{
    font-weight: bold; font-size: 80%;
    text-align: center;
}
h1.title,.rsa-red-text { color: #ab1c19; }
.rsa-red-bg { background-color: #ab1c19; }

@media screen
{
    body
    {
        font-size: 14px;
        width: 800px;
        margin: 0 auto;
    }

@media print
{
    body
    {
        font-size: 10pt;
        width: 100%;
    }
    .page-break {clear: both; page-break-before: always; }
}

#soe-logo
{
    max-width: 100%;
    float: right;
    padding: 1em 0;
}

#logo
{
    background-color: #444141;
    position: absolute;
    left: 0;
    right: 0;
    height: 75px;
    word-wrap: break-word;
    overflow: hidden;
    padding: 4px;
}



#logo .inner
{
    top: 10px;
    right: 10px;
    position: absolute;
}

#logo h1 { text-transform: uppercase; }
#logo h2 { font-size: 100%; display: inline; }
#logo h1, #logo h2, #logo a
{
    color: white;
    text-align: right;
    background-color: transparent;
    border-style: none;
    padding: 0;
    margin: 0;
    display: block;
    font-weight: bold;
    text-shadow: 2px 2px black;
}

#weekly-topics { counter-reset: week; }
#weekly-topics h3:before {
    counter-increment: week;
    content: "Week " counter(week) ": " 
}

#TOC {
    background: none repeat scroll 0 0 white;
    border: 1px solid black;
    counter-reset: toc;
    float: right;
    width: 40%;   
}
#TOC > ul > li 
{ 
    list-style: upper-roman; 
    counter-increment: toc; 
    counter-reset: sub1;
}
/*#TOC>ul>li>ul>li:before { 
    content: counter(toc) "." counter(sub1) " ";
    counter-increment: toc; }*/
#TOC li ul li { list-style: decimal;}

</style>

